syntax = "proto3";
import "fund.proto";

package proto;

option go_package = "./proto";

//Overview
message PortfoliosRequest {
}
message PortfoliosResponse {
  repeated Portfolio entries = 1;
}
message Portfolio {
  string id = 1;
  string name = 2;
  repeated PortfolioListItem entries = 3;
}
message PortfolioListItem {
  string id = 1;
  string fundId = 2;
  string name = 3;
  double amount = 4;
}
message UpsertPortfolioRequest{
  Portfolio portfolio = 1;
}
message UpsertPortfolioResponse {
  Portfolio portfolio = 1;
}

//Details
message PortfolioDetailsRequest {
  string portfolioId = 1;
}
message PortfolioDetailsResponse {
  repeated string sectors = 1;
  repeated FundInformation fundInformation = 2;
  map<string, PortfolioFundSectorWeighting>  portfolioFundSectorWeightings = 3;
  repeated PortfolioFundHolding portfolioFundHoldings = 4;
}

message PortfolioFundSectorWeighting {
  double totalPercentage = 2;
  repeated PortfolioFundSectorWeightingEntry fundSectorWeighting = 3;
}
message PortfolioFundSectorWeightingEntry {
  string fundId = 1;
  string fundName = 2;
  double percentage = 3;
}

message FilterPortfolioHoldingsRequest {
  string portfolioId = 1;
  string searchTerm = 2;
  string sectorName = 3;
  int64 limit = 4;
  int64 offset = 5;
}
message FilterPortfolioHoldingsResponse {
  repeated PortfolioFundHolding entries = 1;
}
message PortfolioFundHolding {
  string ticker = 1;
  string holdingId = 2;
  string holdingName = 3;
  double cumulativePercentage = 4;
  repeated PortfolioFundHoldingEntry funds = 5;
}
message PortfolioFundHoldingEntry {
  string fundId = 1;
  double ratiodPercentage = 2;
}

